--- a/src/main/resources/templates/evento/allegaContrattiSponsor.html
+++ b/src/main/resources/templates/evento/allegaContrattiSponsor.html
@@ -24,7 +24,7 @@
 							<div class="item form-group">
 								<div id="allegatoModal">
 									<th:block th:fragment="allegatoContrattoSponsorModal">
-										<th:block th:include="fragments/allegatiext :: allegatiext(sponsorWrapper, false, '*{T(it.tredi.ecm.dao.enumlist.FileEnum).FILE_CONTRATTO_SPONSOR}', sponsorFile, null, null, null, true, 'edit', true)" ></th:block>
+										<th:block th:include="fragments/allegatiext :: allegatiext(sponsorWrapper, false, '*{T(it.tredi.ecm.dao.enumlist.FileEnum).FILE_CONTRATTO_SPONSOR}', sponsorFile, null, null, null, false, 'edit', true)" ></th:block>
 									</th:block>
 								</div>
 							</div>
