--- a/src/main/resources/templates/evento/eventoRendiconto.html
+++ b/src/main/resources/templates/evento/eventoRendiconto.html
@@ -136,7 +136,7 @@
 								<a id="rendicontazione_esempio_link" target="_blank" th:text="#{label.esempio_modello}" href="https://salute.regione.veneto.it/c/document_library/get_file?p_l_id=991804&amp;folderId=1550089&amp;name=DLFE-29220.zip"></a>
 							</div>
 							<!-- <th:block th:include="fragments/allegati :: allegati(eventoWrapperRendiconto, false, reportPartecipanti, null, null, null, false, 'edit', false)" ></th:block> -->
-							<th:block th:include="fragments/allegatiext :: allegatiext(eventoWrapperRendiconto, false, '*{T(it.tredi.ecm.dao.enumlist.FileEnum).FILE_REPORT_PARTECIPANTI}', reportPartecipanti, null, null, null, true, 'edit', false)" ></th:block>
+							<th:block th:include="fragments/allegatiext :: allegatiext(eventoWrapperRendiconto, false, '*{T(it.tredi.ecm.dao.enumlist.FileEnum).FILE_REPORT_PARTECIPANTI}', reportPartecipanti, null, null, null, false, 'edit', false)" ></th:block>
 
 							<div class="item form-group with-margin-top">
 								<div class="col-xs-5"></div>
