rimossi altri controlli rimasti

--- a/src/main/resources/templates/accreditamento/datiAccreditamentoFragment.html
+++ b/src/main/resources/templates/accreditamento/datiAccreditamentoFragment.html
@@ -587,7 +587,7 @@
 
 							<!-- ALLEGATO 1 (ESTRATTO DEL BILANCIO COMPLESSIVO) -->
 							<!-- <th:block th:include="fragments/allegati :: allegati(datiAccreditamentoWrapper, true, estrattoBilancioComplessivo, ${!showOnly ? 'estrattoBilancioComplessivo' : null}, null, ${editabile ? #messages.msg('label.required_fatturato') : null}, true, ${mode}, false)" ></th:block> -->
-							<th:block th:include="fragments/allegatiext :: allegatiext(datiAccreditamentoWrapper, true, '*{T(it.tredi.ecm.dao.enumlist.FileEnum).FILE_ESTRATTO_BILANCIO_COMPLESSIVO}', estrattoBilancioComplessivo, ${!showOnly ? 'estrattoBilancioComplessivo' : null}, null, ${editabile ? #messages.msg('label.required_fatturato') : null}, true, ${mode}, false)" ></th:block>
+							<th:block th:include="fragments/allegatiext :: allegatiext(datiAccreditamentoWrapper, true, '*{T(it.tredi.ecm.dao.enumlist.FileEnum).FILE_ESTRATTO_BILANCIO_COMPLESSIVO}', estrattoBilancioComplessivo, ${!showOnly ? 'estrattoBilancioComplessivo' : null}, null, ${editabile ? #messages.msg('label.required_fatturato') : null}, false, ${mode}, false)" ></th:block>
 
 							<div th:class="${valutabile or enableField ? 'divider' : 'divider-dashed'}"></div>
 
@@ -718,7 +718,7 @@
 
 							<!-- ALLEGATO 2 (ETRATTO BILANCIO RELATIVO FORMAZIONE + BUDGET PREVISIONALE) -->
 							<!-- <th:block th:include="fragments/allegati :: allegati(datiAccreditamentoWrapper, true, estrattoBilancioFormazione, ${!showOnly ? 'estrattoBilancioFormazione' : null}, null, null, true, ${mode}, true)" ></th:block> -->
-							<th:block th:include="fragments/allegatiext :: allegatiext(datiAccreditamentoWrapper, true, '*{T(it.tredi.ecm.dao.enumlist.FileEnum).FILE_ESTRATTO_BILANCIO_FORMAZIONE}', estrattoBilancioFormazione, ${!showOnly ? 'estrattoBilancioFormazione' : null}, null, null, true, ${mode}, true)" ></th:block>
+							<th:block th:include="fragments/allegatiext :: allegatiext(datiAccreditamentoWrapper, true, '*{T(it.tredi.ecm.dao.enumlist.FileEnum).FILE_ESTRATTO_BILANCIO_FORMAZIONE}', estrattoBilancioFormazione, ${!showOnly ? 'estrattoBilancioFormazione' : null}, null, null, false, ${mode}, true)" ></th:block>
 
 						</div>
 
@@ -828,13 +828,13 @@
 
 							<!-- ALLEGATO 3 (ORGANIGRAMMA) -->
 							<!-- <th:block th:include="fragments/allegati :: allegati(datiAccreditamentoWrapper, true, organigramma,  ${!showOnly ? 'organigramma' : null}, null, null, true, ${mode}, true)" ></th:block> -->
-							<th:block th:include="fragments/allegatiext :: allegatiext(datiAccreditamentoWrapper, true, '*{T(it.tredi.ecm.dao.enumlist.FileEnum).FILE_ORGANIGRAMMA}', organigramma,  ${!showOnly ? 'organigramma' : null}, null, null, true, ${mode}, true)" ></th:block>
+							<th:block th:include="fragments/allegatiext :: allegatiext(datiAccreditamentoWrapper, true, '*{T(it.tredi.ecm.dao.enumlist.FileEnum).FILE_ORGANIGRAMMA}', organigramma,  ${!showOnly ? 'organigramma' : null}, null, null, false, ${mode}, true)" ></th:block>
 
 							<div th:class="${valutabile or enableField ? 'divider' : 'divider-dashed'}"></div>
 
 							<!-- ALLEGATO 4 (FUNZIONIGRAMMA) -->
 							<!-- <th:block th:include="fragments/allegati :: allegati(datiAccreditamentoWrapper, true, funzionigramma,  ${!showOnly ? 'funzionigramma' : null}, null, null, true, ${mode}, true)" ></th:block> -->
-							<th:block th:include="fragments/allegatiext :: allegatiext(datiAccreditamentoWrapper, true, '*{T(it.tredi.ecm.dao.enumlist.FileEnum).FILE_FUNZIONIGRAMMA}', funzionigramma,  ${!showOnly ? 'funzionigramma' : null}, null, null, true, ${mode}, true)" ></th:block>
+							<th:block th:include="fragments/allegatiext :: allegatiext(datiAccreditamentoWrapper, true, '*{T(it.tredi.ecm.dao.enumlist.FileEnum).FILE_FUNZIONIGRAMMA}', funzionigramma,  ${!showOnly ? 'funzionigramma' : null}, null, null, false, ${mode}, true)" ></th:block>
 						</div>
 
 						<input id="submitButton" type="submit" style="display: none;" />
