--- a/src/main/resources/templates/persona/personaFragment.html
+++ b/src/main/resources/templates/persona/personaFragment.html
@@ -749,7 +749,7 @@
 								<a id="atto_nomina_esempio_link" target="_blank" th:text="#{label.esempio_modello}" href="https://salute.regione.veneto.it/c/document_library/get_file?p_l_id=991804&amp;folderId=1536572&amp;name=DLFE-34058.docx"></a>
 							</div>
 							<!-- <th:block th:include="fragments/allegati :: allegati(personaWrapper, true, attoNomina, ${showOnly ? null : 'attoNomina'}, ${personaWrapper.ruolo}, null, true, ${mode}, true)" ></th:block> -->
-							<th:block th:include="fragments/allegatiext :: allegatiext(personaWrapper, true, '*{T(it.tredi.ecm.dao.enumlist.FileEnum).FILE_ATTO_NOMINA}', attoNomina, ${showOnly ? null : 'attoNomina'}, ${personaWrapper.ruolo}, null, true, ${mode}, true)" ></th:block>
+							<th:block th:include="fragments/allegatiext :: allegatiext(personaWrapper, true, '*{T(it.tredi.ecm.dao.enumlist.FileEnum).FILE_ATTO_NOMINA}', attoNomina, ${showOnly ? null : 'attoNomina'}, ${personaWrapper.ruolo}, null, false, ${mode}, true)" ></th:block>
 						</div>
 
 						<div th:if="${(valutabile or enableField) and !personaWrapper.persona.delegatoLegaleRappresentante}" class="divider"></div>
@@ -758,7 +758,7 @@
 						<div th:if="${personaWrapper.persona.delegatoLegaleRappresentante}">
 							<div th:if="${editabile}" class="divider-dashed"></div>
 							<!-- <th:block th:include="fragments/allegati :: allegati(personaWrapper, true, delega, ${showOnly ? null : 'delega'}, ${personaWrapper.ruolo}, null, true, ${mode}, true)"></th:block> -->
-							<th:block th:include="fragments/allegatiext :: allegatiext(personaWrapper, true, '*{T(it.tredi.ecm.dao.enumlist.FileEnum).FILE_DELEGA}', delega, ${showOnly ? null : 'delega'}, ${personaWrapper.ruolo}, null, true, ${mode}, true)"></th:block>
+							<th:block th:include="fragments/allegatiext :: allegatiext(personaWrapper, true, '*{T(it.tredi.ecm.dao.enumlist.FileEnum).FILE_DELEGA}', delega, ${showOnly ? null : 'delega'}, ${personaWrapper.ruolo}, null, false, ${mode}, true)"></th:block>
 						</div>
 
 						<div th:if="${(valutabile or enableField) and personaWrapper.persona.delegatoLegaleRappresentante}" class="divider"></div>
@@ -766,7 +766,7 @@
 						<!--   ALLEGATO 3 (CURRICULUM VITAE)   -->
 						<div th:if="${editabile}" class="divider-dashed"></div>
 						<!-- <th:block th:include="fragments/allegati :: allegati(personaWrapper, true, cv, ${showOnly ? null : 'cv'}, ${personaWrapper.ruolo}, null, true, ${mode}, true)"></th:block> -->
-						<th:block th:include="fragments/allegatiext :: allegatiext(personaWrapper, true, '*{T(it.tredi.ecm.dao.enumlist.FileEnum).FILE_CV}', cv, ${showOnly ? null : 'cv'}, ${personaWrapper.ruolo}, null, true, ${mode}, true)"></th:block>
+						<th:block th:include="fragments/allegatiext :: allegatiext(personaWrapper, true, '*{T(it.tredi.ecm.dao.enumlist.FileEnum).FILE_CV}', cv, ${showOnly ? null : 'cv'}, ${personaWrapper.ruolo}, null, false, ${mode}, true)"></th:block>
 
 						<div th:if="${(valutabile or enableField) and personaWrapper.persona.delegatoLegaleRappresentante}" class="divider"></div>
 
