--- a/src/main/resources/templates/accreditamento/accreditamentoFragment.html
+++ b/src/main/resources/templates/accreditamento/accreditamentoFragment.html
@@ -153,7 +153,7 @@
 													</tr>
 													<!-- DELEGATO LEGALE RAPPRESENTANTE -->
 													<tr th:classappend="${#sets.contains(accreditamentoWrapper.sostituiti, T(it.tredi.ecm.dao.enumlist.Ruolo).DELEGATO_LEGALE_RAPPRESENTANTE) ? 'integrazione-creazione' : ''}"
-														th:if="${accreditamentoWrapper.provider.tipoOrganizzatore.tipoP and ((mode != 'validate' and mode != 'enableField') or accreditamentoWrapper.delegatoLegaleRappresentante != null)}" th:class="${(accreditamentoWrapper.mappaFullModificati != null and #maps.containsKey(accreditamentoWrapper.mappaFullModificati, accreditamentoWrapper.delegatoLegaleRappresentante.id) and
+														th:if="${((mode != 'validate' and mode != 'enableField') or accreditamentoWrapper.delegatoLegaleRappresentante != null)}" th:class="${(accreditamentoWrapper.mappaFullModificati != null and #maps.containsKey(accreditamentoWrapper.mappaFullModificati, accreditamentoWrapper.delegatoLegaleRappresentante.id) and
 														accreditamentoWrapper.mappaFullModificati.get(accreditamentoWrapper.delegatoLegaleRappresentante.id).idField == T(it.tredi.ecm.dao.enumlist.IdFieldEnum).DELEGATO_LEGALE_RAPPRESENTANTE__FULL) ? 'integrazione-creazione' : ''}">
 														<td th:unless="${accreditamentoWrapper.delegatoLegaleRappresentante == null}"><a th:text="#{label.delegato_legale_rappresentante}" th:href="@{|/accreditamento/${accreditamentoWrapper.accreditamento.id}/provider/${accreditamentoWrapper.provider.id}/persona/${accreditamentoWrapper.delegatoLegaleRappresentante.id}/show${urlParam}|}"></a></td>
 														<td th:if="${accreditamentoWrapper.delegatoLegaleRappresentante == null}"><div th:text="#{label.delegato_legale_rappresentante}"></div></td>
@@ -1083,12 +1083,12 @@
 											</div>
 
 											<div th:if="${accreditamentoWrapper.accreditamento.verbaleValutazioneSulCampoPdf}">
-												
+
 												<label class="control-label">
 													<span th:class="label-show" th:text="#{label.pdf_verbale_valutazione_sul_campo}">pdf_verbale_valutazione_sul_campo</span>
 													&nbsp;&nbsp;<a th:if="${#authentication.principal.hasProfile('SEGRETERIA')}" class="btn btn-primary" data-toggle="modal" data-target=".modal-confirm">Modifica documenti</a>
 												</label>
-												
+
 												<div>
 													<div class="value"><i class="fa fa-download"> </i> <a th:text="${accreditamentoWrapper.accreditamento.verbaleValutazioneSulCampoPdf.nomeFile}" th:href="@{|/file/${accreditamentoWrapper.accreditamento.verbaleValutazioneSulCampoPdf.id}|}"></a></div>
 													<div class="" th:if="${accreditamentoWrapper.accreditamento.verbaleValutazioneSulCampoPdf.isProtocollato()}"><div class="value"><i class="fa fa-pencil"> </i> <span th:text="#{label.info_protocollo(${#numbers.formatInteger(accreditamentoWrapper.accreditamento.verbaleValutazioneSulCampoPdf.protocollo.numero,0)},${#temporals.format(accreditamentoWrapper.accreditamento.verbaleValutazioneSulCampoPdf.protocollo.data,'dd/MM/yyyy')})}"></span></div></div>
@@ -1560,7 +1560,7 @@
 				function showModificaDocumenti(){
 					$('.modal-confirm').show('modal');
 				}*/
-				
+
 				$(document).ready(function() {
 
 					if ([[${currentTab}]] != null)
