--- a/src/main/resources/templates/evento/eventoList.html
+++ b/src/main/resources/templates/evento/eventoList.html
@@ -339,20 +339,20 @@ function loadScript(url, callback){
 										<!-- td th:text="${@eventoServiceController.versioneEvento(evento).numeroVersione}"></td>-->
 										<td th:text="${evento.versione != null ? evento.versione.numeroVersione : ''}"></td>
 										<td class="text-full-length" th:if="${#authentication.principal.account.isProvider() or #authentication.principal.account.isSegreteria()}">
-											<a class="btn btn-primary min-icon-width" th:if="${evento.canEdit() or #authentication.principal.isSegreteria()}" th:href="@{|/provider/${evento.provider.id}/evento/${evento.id}/edit|}" th:title="#{label.modifica}"><i class="fa fa-pencil"></i></a>
+											<a class="btn btn-primary min-icon-width" th:if="${@eventoServiceController.canEdit(evento) or #authentication.principal.isSegreteria()}" th:href="@{|/provider/${evento.provider.id}/evento/${evento.id}/edit|}" th:title="#{label.modifica}"><i class="fa fa-pencil"></i></a>
 											<button th:if="${#authentication.principal.account.isSegreteria() and evento.canSegreteriaShiftData()}" type="button" class="btn btn-primary min-icon-width" th:onclick="|openModalScadenze(${evento.id}, '${evento.dataScadenzaPagamento}', '${evento.dataScadenzaInvioRendicontazione}')|" th:title="#{label.abilita}"><i class="fa fa-unlock-alt"> </i></button>
 
 											<!-- TODO DISABILITATO PER LA PRODUZIONE -->
-											<th:block th:if="${evento.canDoPagamento()}">
+											<th:block th:if="${@eventoServiceController.canDoPagamento(evento)}">
 												<a th:if="${evento.provider.myPay == true or (evento.provider.myPay == null and evento.provider.isGruppoB())}" class="btn btn-success btn-min-icon-width" th:href="@{|/provider/${evento.provider.id}/evento/${evento.id}/paga|}" th:title="#{label.paga}"><i class="fa fa-euro"></i></a>
 												<a th:if="${evento.provider.myPay == false}" class="btn btn-success btn-min-icon-width" th:href="@{|/provider/${evento.provider.id}/evento/${evento.id}/quietanzaPage|}" th:title="#{label.allega_quietanza}"><i class="fa fa-euro"></i></a>
 											</th:block>
 											<a th:if="${evento.pagato and evento.pagatoQuietanza}" class="btn btn-success btn-min-icon-width" th:href="@{|/provider/${evento.provider.id}/evento/${evento.id}/quietanzaPagamento/show|}"  th:title="#{label.visualizza_quietanza}"><i class="fa fa-euro"> </i></a>
 
 											<a class="btn btn-primary min-icon-width" th:if="${#authentication.principal.account.isSegreteria()}" th:href="@{|/audit/entity/${evento.getAuditEntityType()}/entityId/${evento.id}|}" th:title="#{label.registro_operazioni}"><i class="fa fa-book"></i></a>
-											<a class="btn btn-warning min-icon-width" th:if="${evento.canDoRendicontazione()}" th:href="@{|/provider/${evento.provider.id}/evento/${evento.id}/rendiconto|}" th:title="#{label.rendiconto}"><i class="fa fa-file-text"></i></a>
-											<a class="btn btn-primary min-icon-width" th:if="${evento.canDoUploadSponsor()}" th:href="@{|/provider/${evento.provider.id}/evento/${evento.id}/allegaContrattiSponsor|}" th:title="#{label.allega_contratti_sponsor}"><i class="fa fa-file"></i></a>
-											<button class="btn btn-danger min-icon-width" th:if="${evento.canEdit()}" th:onclick="|confirmDeleteEventoModal('${evento.provider.id}','${evento.id}','${evento.proceduraFormativa}','${evento.codiceIdentificativo}','${evento.stato}')|" th:title="${evento.stato == T(it.tredi.ecm.dao.enumlist.EventoStatoEnum).BOZZA} ? #{label.elimina} : #{label.annulla}"><i class="fa fa-trash"></i></button>
+											<a class="btn btn-warning min-icon-width" th:if="${@eventoServiceController.canDoRendicontazione(evento)}" th:href="@{|/provider/${evento.provider.id}/evento/${evento.id}/rendiconto|}" th:title="#{label.rendiconto}"><i class="fa fa-file-text"></i></a>
+											<a class="btn btn-primary min-icon-width" th:if="${@eventoServiceController.canDoUploadSponsor(evento)}" th:href="@{|/provider/${evento.provider.id}/evento/${evento.id}/allegaContrattiSponsor|}" th:title="#{label.allega_contratti_sponsor}"><i class="fa fa-file"></i></a>
+											<button class="btn btn-danger min-icon-width" th:if="${@eventoServiceController.canEdit(evento)}" th:onclick="|confirmDeleteEventoModal('${evento.provider.id}','${evento.id}','${evento.proceduraFormativa}','${evento.codiceIdentificativo}','${evento.stato}')|" th:title="${evento.stato == T(it.tredi.ecm.dao.enumlist.EventoStatoEnum).BOZZA} ? #{label.elimina} : #{label.annulla}"><i class="fa fa-trash"></i></button>
 										</td>
 										<td></td>
 									</tr>
